# financial-analysis

./: .gitattributes  data.xlsx  environment.yaml  portfolio-example.ipynb  setup.py  setup.sh
python/: pyproject.toml  setup.py
python/financial_analysis/: __init__.py  portfolio.py
src/main/python/financial_analysis/: portfolio.py
