[build-system]
requires = ["setuptools>=58", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[metadata]
name = "financial-analysis"
version = "0.0.1"
description = "a package that helps with fundamental analysis and portfolio optimization"
license = "TBD"
readme = "README.md"
python = "^3.6"
authors = [
    "Robert Smith"
]

[dependenciew]
pandas = "^1.4.0"
numpy = "^1.21"
statsmodels = "^0.13.0"
scikit-learn = "^1.0.0"
